<resources>
    <string name="app_name">ContentProviderApp</string>
    <string name="name" >Name</string>
    <string name="birthday">Birthday</string>
    <string name="add_a_new_birthday">Add a new birthday</string>
    <string name="show_all_birthdays">Show all birthdays</string>
    <string name="delete_all_birthdays">delete all birthdays</string>
    <item name= "visible" type="id"/>
    <item name= "masked" type="id"/>
</resources>
