<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a660252397.contentproviderapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/firstNameET"
                android:ems="10"
                android:hint="@string/name">

                <requestFocus/>
            </EditText>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/birthdayET"
                android:ems="10"
                android:hint="@string/birthday">
            </EditText>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@id/addButton"
            android:text="@string/add_a_new_birthday"
            android:onClick="addBirthdayClick"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@id/showButton"
            android:text="@string/show_all_birthdays"
            android:onClick="showBirthdayClick"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@id/deleteButton"
            android:text="@string/delete_all_birthdays"
            android:onClick="deleteBirthdayClick"
            android:layout_marginTop="10dp"/>

    </LinearLayout>


</ScrollView>
